youfull/objects/Sales_Leader_History__c.object
<CustomObject>
    <description>This hold up to 7 prior Campaigns&apos; worth of performance and leadership summary data for a Sales Leader or Sales Representative.</description>
    <fields>
        <fullName>ACCT_NR__c</fullName>
        <label>Acct. No.</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVG_DISCNT_PCT__c</fullName>
        <label>Average Discount Rate [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_ACT_PCT__c</fullName>
        <label>Average Activity Rate [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_DISTR_SLS_PCT__c</fullName>
        <label>G1 Average Sales Distribution [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_QPA_CNT__c</fullName>
        <label>Average Qualified Personal Appointment R</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_RMVL_PCT__c</fullName>
        <label>Average Removal Rate [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_1_UNIT_COMM_PCT__c</fullName>
        <label>G1 Average Unit Commission Rates [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_2_DISTR_SLS_PCT__c</fullName>
        <label>G2 Average Sales Distribution [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_2_UNIT_COMM_PCT__c</fullName>
        <label>G2 Average Unit Commission Rates [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_3_DISTR_SLS_PCT__c</fullName>
        <description>Average of (award sales within 3rd generation / award sales within 3 generations) over last N campaigns</description>
        <label>G3 Average Sales Distribution [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_GENRTN_3_UNIT_COMM_PCT__c</fullName>
        <label>G3 Average Unit Commission Rates [%]</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_SIZE_AMT__c</fullName>
        <label>Average Order Size</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BONUS_ERNGS_AMT__c</fullName>
        <label>Bonus Earning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRCHR_CNT__c</fullName>
        <label>Brochure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUST_CNT__c</fullName>
        <label>Customers Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Leader Histories</relationshipLabel>
        <relationshipName>Sales_Leader_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EXEC_ERNGS_AMT__c</fullName>
        <label>Executive Earning</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_UNIT_SLS__c</fullName>
        <label>Executive Sales</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_1_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>No. of Executive Groups</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_2_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>Exec Gen 2 Exec Title Staff Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXGENRTN_3_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>Exec Gen +3 Exec Title Staff Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLD_SLS_CMPGN_NR__c</fullName>
        <label>Campaign Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_ACTV_BASE_CNT__c</fullName>
        <label>G1_ACTV_BASE_CNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_Active_Base_Gap_for_CC_PY__c</fullName>
        <formula>SPPY_GENRTN_1_ACTV_REP_CNT__c - SPPY_G1_ACTV_BASE_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Active Base Gap for CC PY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_Active_Base_Gap_for_CC_TY__c</fullName>
        <formula>GENTRTN_1_ACTV_REP_CNT__c - G1_ACTV_BASE_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G1 Active Base Gap for CC TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_ACT_PCT__c</fullName>
        <label>G1 Activity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_APPT_CNT__c</fullName>
        <label>Personal Appts.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_QPA_CNT__c</fullName>
        <label>Qualified Personal Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_QPA_CONVRSN_PCT__c</fullName>
        <formula>100 * (GENRTN_1_QPA_CNT__c / GENRTN_1_APPT_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Personal Appointment rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_RMVL_CNT__c</fullName>
        <label>G1 Removals</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_STF_CNT__c</fullName>
        <label>G1 Staff Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_0_STF_CNT__c</fullName>
        <label>Gen 1 Title 0 Leader Count (Candidates)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_10_STF_CNT__c</fullName>
        <label>Gen 1 Title 10 Leader Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_11_STF_CNT__c</fullName>
        <label>Gen 1 Title 11 Leader Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_1_NEW_STF_CNT__c</fullName>
        <label>Gen 1 Title 1 Leader New Count (UL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_2_NEW_STF_CNT__c</fullName>
        <label>Gen 1 Title 2 Leader New Count (AUL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_3_NEW_STF_CNT__c</fullName>
        <label>Gen 1 Title 3 Leader New Count (EUL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_TITL_STF_CNT__c</fullName>
        <formula>GENRTN_1_TITL_1_STF_CNT__c + GENRTN_1_TITL_2_STF_CNT__c + GENRTN_1_TITL_3_STF_CNT__c + GENRTN_1_TITL_4_STF_CNT__c + GENRTN_1_TITL_5_STF_CNT__c + GENRTN_1_TITL_6_STF_CNT__c + GENRTN_1_TITL_7_STF_CNT__c + GENRTN_1_TITL_8_STF_CNT__c + GENRTN_1_TITL_9_STF_CNT__c + GENRTN_1_TITL_10_STF_CNT__c + GENRTN_1_TITL_11_STF_CNT__c + GENRTN_1_TITL_12_STF_CNT__c + GENRTN_1_TITL_13_STF_CNT__c + GENRTN_1_TITL_14_STF_CNT__c
+GENRTN_1_TITL_15_STF_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gen 1 Total Titled Leaders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_UNIT_SLS_AMT__c</fullName>
        <label>GENRTN_1_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_ACT_PCT__c</fullName>
        <label>GENRTN_2_ACT_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_APPT_CNT__c</fullName>
        <label>GENRTN_2_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_UNIT_SLS_AMT__c</fullName>
        <label>GENRTN_2_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_ACT_PCT__c</fullName>
        <label>GENRTN_3_ACT_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_APPT_CNT__c</fullName>
        <label>GENRTN_3_APPT_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_UNIT_SLS_AMT__c</fullName>
        <label>GENRTN_3_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_1_ACTV_REP_CNT__c</fullName>
        <label>G1 Actives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_2_ACTV_REP_CNT__c</fullName>
        <label>GENTRTN_2_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENTRTN_3_ACTV_REP_CNT__c</fullName>
        <label>GENTRTN_3_ACTV_REP_CNT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_APPT_CNT__c</fullName>
        <label>Appointments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INVC_AWRD_SLS_AMT__c</fullName>
        <label>Award Sales Invoiced</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_INVC_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Invoiced</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_QPA_CNT__c</fullName>
        <label>Qualifying Personal Appointments (QPA)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_AWRD_SLS_AMT__c</fullName>
        <label>Award Sales Submitted</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_SUBMTD_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Submitted</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_UNIT_SLS_AMT__c</fullName>
        <formula>GRP_INVC_AWRD_SLS_AMT__c +  GRP_SUBMTD_AWRD_SLS_AMT__c + GRP_INVC_RTURN_AWRD_SLS_AMT__c + GRP_SUBMTD_RTURN_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INVC_AWRD_SLS_AMT__c</fullName>
        <label>Award Sales Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INVC_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NR__c</fullName>
        <label>Level Title Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDR_ERNGS_AMT__c</fullName>
        <label>Leadership Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA1_GRP_UNIT_SLS__c</fullName>
        <label>Total Unit Sales LOA1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_GRP_UNIT_SLS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Unit Sales LOA1-6</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PD_TITL_LVL_NR__c</fullName>
        <label>Paid Title (Closed Campaign)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRSNL_DSCNT_AMT__c</fullName>
        <label>Earnings from Personal Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_SLS_AMT__c</fullName>
        <formula>( INVC_AWRD_SLS_AMT__c  +  INVC_RTURN_AWRD_SLS_AMT__c  +  SUBMTD_AWRD_SLS_AMT__c +   SUBMTD_RTURN_AWRD_SLS_AMT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTURNS_PCT__c</fullName>
        <label>% Returns</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLS_LDR_HIST_KEY__c</fullName>
        <externalId>true</externalId>
        <label>Sales Leader History Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SPPY_BRCHR_CNT__c</fullName>
        <label>SPPY Brochure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_CUST_CNT__c</fullName>
        <label>SPPY Customers Served</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_EXEC_UNIT_SLS__c</fullName>
        <label>SPPY Executive Sales</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_EXGENRTN_1_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>SPPY Exec Gen 1 Exec Title Staff</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_EXGENRTN_2_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>SPPY Exec Gen 2 Exec Title Staff</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_EXGENRTN_TH_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>SPPY_EXGENRTN_TH_TOTAL_EXEC_TITL_STF_CNT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_G1_ACTV_BASE_CNT__c</fullName>
        <label>G1 Active Base SPPY (history)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_ACTV_REP_CNT__c</fullName>
        <label>SPPY G1 Actives</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_ACT_PERC__c</fullName>
        <label>SPPY_GENRTN_1_ACT_PERC</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_APPT_CNT__c</fullName>
        <label>SPPY Personal Appointments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_QPA_CNT__c</fullName>
        <label>SPPY Qualified Personal Appointments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_QPA_CONVRSN_PCT__c</fullName>
        <formula>100 * (SPPY_GENRTN_1_QPA_CNT__c / SPPY_GENRTN_1_APPT_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPPY Qualified Personal Appointment rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_TITL_0_STF_CNT__c</fullName>
        <label>SPPY Gen 1 Title 0 Leader Count (Candida</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_TITL_10_STF_CNT__c</fullName>
        <label>SPPY Gen 1 Title 10 Leader Count (EL)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_TITL_1_STF_CNT__c</fullName>
        <label>SPPY Gen 1 Title 1 Leader Count (UL)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_UNIT_SLS_AMT__c</fullName>
        <label>SPPY_GENRTN_1_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_2_ACT_PCT__c</fullName>
        <label>SPPY_GENRTN_2_ACT_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_2_APPT_CNT__c</fullName>
        <label>SPPYGeneration 2 Appointments</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_2_UNIT_SLS_AMT__c</fullName>
        <label>SPPY_GENRTN_2_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_3_ACT_PCT__c</fullName>
        <label>SPPY Generation 3 Activity Rate</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_3_APPT_CNT__c</fullName>
        <label>SPPYGeneration 3 Appointments</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_3_UNIT_SLS_AMT__c</fullName>
        <label>SPPY_GENRTN_3_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENTRTN_2_ACTV_REP_CNT__c</fullName>
        <label>SPPY_GENTRTN_2_ACTV_REP_CNT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENTRTN_3_ACTV_REP_CNT__c</fullName>
        <label>SPPY_GENTRTN_3_ACTV_REP_CNT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GRP_UNIT_SLS_AMT__c</fullName>
        <label>SPPY Total Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LDRSHP_TITL_LVL_NR__c</fullName>
        <label>SPPY Level Title Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_LDR_ERNGS_AMT__c</fullName>
        <label>SPPY Leadership Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LOA1_GRP_UNIT_SLS__c</fullName>
        <label>SPPY Total Unit Sales LOA1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LOA_1_6_GRP_UNIT_SLS__c</fullName>
        <label>SPPY Total Unit Sales LOA1-6</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_NET_SLS_AMT__c</fullName>
        <label>SPPY Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_PD_TITL_LVL_NR__c</fullName>
        <label>SPPY Paid Title (Closed Campaign)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_PRSNL_SLS_AMT__c</fullName>
        <label>SPPY Personal Volume</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_RTURNS_PCT__c</fullName>
        <formula>100 * (SPPY_RTURN_NET_SLS_AMT__c / (SPPY_NET_SLS_AMT__c  +  ABS(SPPY_RTURN_NET_SLS_AMT__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPPY % Returns</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_RTURN_NET_SLS_AMT__c</fullName>
        <label>SPPY Return Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_TOTAL_GENRTN_1_EXEC_TITL_STF_CNT__c</fullName>
        <label>SPPY Total Gen 1 Executive Title Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_TSRP_GRP_UNIT_SLS__c</fullName>
        <label>SPPY Total Unit Sales TopSeller</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_UNIT_APPT_CNT__c</fullName>
        <label>SPPY Unit Appointments</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_UNIT_QPA_CNT__c</fullName>
        <label>SPPY Unit Qualified Appointments</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_Unit_Actives__c</fullName>
        <formula>SPPY_GENTRTN_2_ACTV_REP_CNT__c + SPPY_GENTRTN_3_ACTV_REP_CNT__c + SPPY_GENRTN_1_ACTV_REP_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPPY Unit Actives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUBMTD_AWRD_SLS_AMT__c</fullName>
        <label>Award Sales Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUBMTD_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_ESTMTD_ERNGS__c</fullName>
        <description>Total Estimated Earnings</description>
        <label>Total Estimated Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_GENRTN_1_EXEC_TITL_STF_CNT__c</fullName>
        <label>Total Gen 1 Executive Title Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TSRP_GRP_UNIT_SLS__c</fullName>
        <label>Total Unit Sales TopSeller</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Actives__c</fullName>
        <formula>GENTRTN_2_ACTV_REP_CNT__c + GENTRTN_3_ACTV_REP_CNT__c + GENTRTN_1_ACTV_REP_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Actives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Leader History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Leader History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Leader Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>